--- a/src/App.css
+++ b/src/App.css
@@ -3,38 +3,26 @@
 :root {
   --main: 'Nunito', sans-serif;
 
-  --green: #2bbd7e;
+  --purple: #42489E;
 }
 
 .App {
-  text-align: center;
-}
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.Content {
+  position: absolute;
+  top: 60px;
+  left: 0;
+  padding: 0 15px;
+  width: 100%;
+  height: 100%;
 }
+@media screen and (min-width: 1000px){
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
+  .Content {
+      position: absolute;
+      left: 50%;
+      transform: translateX(-50%);
+      max-width: 1000px;
   }
 }
