--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -27,7 +27,7 @@
 }
 .logo {
     text-decoration: none;
-    color: var(--green);
+    color: var(--purple);
     font-family: var(--main);
     font-weight: 900;
     font-size: 2.5rem;
