added animation to hero image

--- a/src/components/Button/Button.css
+++ b/src/components/Button/Button.css
@@ -37,6 +37,19 @@
     border-radius: 50px;
     color: white !important;
     font-weight: 900;
-    padding: 10px;
+    padding: 15px 10px;
     width: 50%;
+    cursor: pointer;
+}
+.Button:hover {
+    animation: hovered .5s forwards;
+}
+
+@keyframes hovered {
+    from{
+        
+    }
+    to{
+        
+    }
 }
