--- a/src/App.css
+++ b/src/App.css
@@ -11,9 +11,9 @@
 }
 .Content {
   position: absolute;
-  top: 60px;
+  top: 0;
   left: 0;
-  padding: 0 15px;
+  padding-top: 60px;
   width: 100%;
   height: 100%;
 }
