--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -33,4 +33,26 @@
 .Header-image img {
     height: 90%;
     width: 90%;
+    animation: dropin 2s forwards;
+}
+
+@keyframes dropin {
+    from{
+        opacity: 0;
+        height: 100%;
+    }
+    to {
+        opacity: 100%;
+        height: 90%; 
+    }
+}
+
+@media screen and (max-width: 1000px){
+    .Header {
+        flex-direction: column-reverse;   
+    }
+    .Header-split {
+        width: 100%;
+    }
+
 }
