--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -15,7 +15,8 @@
     justify-content: center;
 }
 .Header-text * {
-    max-width: 350px;
+    max-width: 400px;
+    margin: 15px 0 15px 15px;
     color: var(--purple);
 }
 .Header-text h1 {
@@ -26,6 +27,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    min-height: 300px;
 }
 .Header-image img::selection {
     background: none;
@@ -33,6 +35,8 @@
 .Header-image img {
     height: 90%;
     width: 90%;
+    max-width: 350px;
+    max-height: 350px;
     animation: dropin 2s forwards;
 }
 
@@ -47,12 +51,21 @@
     }
 }
 
-@media screen and (max-width: 1000px){
+@media screen and (max-width: 750px){
     .Header {
         flex-direction: column-reverse;   
     }
     .Header-split {
-        width: 100%;
+        width: auto;
+    }
+    .Header-text {
+        margin: 15px;
+        align-items: center;
+    }
+    .Header-text * {
+        max-width: 400px;
+        text-align: center;
+        margin: 15px 0;
     }
 
 }
