--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,6 +1,7 @@
 .Header {
     width: 100%;
     height: auto;
+    min-height: 500px;
     padding-top: 50px;
 
     display: flex;
@@ -22,10 +23,18 @@
 .Header-text h1 {
     font-weight: 900;
 }
+.Header-text .button-container {
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start
+}
+.button-container * {
+    margin: 0 15px 0 0;
+}
 .Header-image {
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: flex-end;
     justify-content: center;
     min-height: 300px;
 }
@@ -35,8 +44,7 @@
 .Header-image img {
     height: 90%;
     width: 90%;
-    max-width: 350px;
-    max-height: 350px;
+    margin-right: 15px;
     animation: dropin 2s forwards;
 }
 
@@ -67,5 +75,16 @@
         text-align: center;
         margin: 15px 0;
     }
-
+    .button-container {
+        display: block !important;
+    }
+    .button-container .Button {
+        width: 100%;
+    }
+    .Header-image {
+        align-items: center;
+    }
+    .Header-image img {
+        max-width: 350px;
+    }
 }
