--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -4,7 +4,7 @@
     z-index: 10;
     width: 100%;
     height: 60px;
-    background: white;
+    background: ;
     color: var(--purple);
 
     text-align: left;
