--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -14,6 +14,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+    animation: fadein 3s forwards;
 }
 .Header-text * {
     max-width: 400px;
@@ -45,17 +46,15 @@
     height: 90%;
     width: 90%;
     margin-right: 15px;
-    animation: dropin 2s forwards;
+    animation: fadein 3s forwards;
 }
 
-@keyframes dropin {
+@keyframes fadein {
     from{
         opacity: 0;
-        height: 100%;
     }
     to {
         opacity: 100%;
-        height: 90%; 
     }
 }
 
@@ -83,8 +82,9 @@
     }
     .Header-image {
         align-items: center;
+        min-height: 200px
     }
     .Header-image img {
-        max-width: 350px;
+        max-width: 200px;
     }
 }
