--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -82,7 +82,7 @@
     }
     .Header-image {
         align-items: center;
-        min-height: 200px
+        min-height: 200px;
     }
     .Header-image img {
         max-width: 200px;
