--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -44,6 +44,18 @@
         max-width: 1000px;
         margin: 0 15px;
     }
+
+    .mobile {
+        display: none;
+        visibility: hidden;
+    }
+
+}
+@media screen and (max-width: 999px){
+    .desktop {
+        display: none;
+        visibility: hidden;
+    }
 }
 .logo {
     text-decoration: none;
@@ -58,8 +70,31 @@
 
 .navbar-links {
     list-style: none;
+    margin-right: 15px;
+}
+.navbar-links a {
+    color: inherit;
+}
+.navbar-links a:hover {
+    color: var(--pink);
 }
 .navbar-links li{
     float: left;
     margin: 5px 15px 0px 15px;
+
+    font-weight: 700;
+}
+
+
+.hamburgered .hamburger-inner {
+    background-color: white;
+ 
+}
+.hamburgered .hamburger-inner::before {
+    background-color: white;
+ 
+}
+.hamburgered .hamburger-inner::after {
+    background-color: white;
+ 
 }
