--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -74,6 +74,7 @@
 }
 .navbar-links a {
     color: inherit;
+    text-decoration: none;
 }
 .navbar-links a:hover {
     color: var(--pink);
@@ -84,7 +85,6 @@
 
     font-weight: 700;
 }
-
 
 .hamburgered .hamburger-inner {
     background-color: white;
@@ -97,4 +97,51 @@
 .hamburgered .hamburger-inner::after {
     background-color: white;
  
+}
+
+.mobile {
+    margin-right: 15px;
+}
+.mobile * {
+    outline: none;
+}
+
+.mobile .navbar-links {
+
+}
+.mobile .slideout {
+    position: fixed;
+    top: 0;
+    right: -100%;
+
+    height: 100%;
+    width: 60%;
+    padding-top: 60px;
+    z-index: -1;
+    background: white;
+    border-top: 5px solid var(--purple); 
+    box-shadow: 0 1px 5px rgba(0,0,0,.46);
+
+}
+.mobile .navbar-links a {
+    color: var(--purple) !important;
+    text-align: right;
+}
+.mobile .navbar-links a:hover {
+    color: var(--pink) !important;
+}
+.mobile .navbar-links li{
+    margin: 0;
+    padding: 15px;
+    float: none;
+}
+
+.slideout-active {
+    animation: slideout 1s forwards;
+}
+
+@keyframes slideout{
+    to {
+        right: 0;
+    }
 }
