added the services cards

--- a/src/App.css
+++ b/src/App.css
@@ -64,6 +64,7 @@
       left: 50%;
       transform: translateX(-50%);
       max-width: 1000px;
+      overflow: hidden;
   }
   .big-circle-bg {
     display: block;
