--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -2,7 +2,7 @@
     width: 100%;
     height: auto;
     min-height: 500px;
-    padding-top: 50px;
+    padding: 50px 0 75px 0;
 
     display: flex;
 
