--- a/src/components/Navbar/Hamburgers.css
+++ b/src/components/Navbar/Hamburgers.css
@@ -26,7 +26,7 @@
     .hamburger.is-active .hamburger-inner,
     .hamburger.is-active .hamburger-inner::before,
     .hamburger.is-active .hamburger-inner::after {
-      background-color: var(--pink); }
+      background-color: var(--purple); }
   
   .hamburger-box {
     width: 40px;
