--- a/src/components/Services/Services.css
+++ b/src/components/Services/Services.css
@@ -29,10 +29,12 @@
 
 @media screen and (max-width: 900px) {
     .Services {
-        overflow-x: scroll;
-        justify-content: flex-start;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
     }
     .Services-card {
+        width: 90%;
         margin: 20px;
     }
 }
