--- a/src/components/Services/Services.css
+++ b/src/components/Services/Services.css
@@ -7,7 +7,7 @@
 }
 .Services-card {
     width: 300px;
-    max-height: 300px;
+    text-align: center;
     padding: 30px 0;
     background: white;
     border-radius: .5rem; 
@@ -17,7 +17,7 @@
     align-items: center;
     
     border: 3px solid;
-    border-color: var(--off-purple);
+    border-color: var(--purple);
 
 }
 .Services-card-image {
@@ -27,6 +27,14 @@
     padding: 5px;
     background: var(--yellow);
 }
+.Service-card-content {
+    width: 80%;
+    color: var(--purple)
+
+}
+.Service-card-content h1 {
+    font-weight: 900;
+}
 
 @media screen and (max-width: 900px) {
     .Services {
@@ -35,9 +43,23 @@
         align-items: center;
     }
     .Services-card {
-        width: 80%;
+        width: 90%;
         margin: 20px;
         flex-direction: row;
-        padding: 30px 30px;
+        text-align: left;
+
     }
+    .Services-card-image, .Service-card-content {
+        margin: 0px 30px;
+    }
+}
+@media screen and (max-width: 500px) {
+    .Services-card {
+        flex-direction: column;
+        text-align: center;
+    }
+    .Services-card-image {
+        margin: 0 0;
+    }
+    
 }
