added webdev svg

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -2,8 +2,8 @@
     width: 100%;
     height: auto;
     min-height: 500px;
-    padding: 50px 0 75px 0;
-
+    padding: 50px 0 50px 0;
+    margin-bottom:  100px;
     display: flex;
 
 }
