--- a/src/components/Services/Services.css
+++ b/src/components/Services/Services.css
@@ -1,3 +1,10 @@
+section h1 {
+   text-align: center;
+   color: var(--purple);
+   width: 100%;
+   font-weight: 900;
+   font-size: 2.5rem;
+}
 .Services {
     width: 100%;
     height: auto;
