--- a/src/components/Services/Services.css
+++ b/src/components/Services/Services.css
@@ -41,6 +41,7 @@ section h1 {
 
 }
 .Service-card-content h1 {
+    text-align: center;   
     font-weight: 900;
 }
 
@@ -57,6 +58,9 @@ section h1 {
         text-align: left;
 
     }
+    .Services-card h1 {
+        text-align: left;
+    }
     .Services-card-image, .Service-card-content {
         margin: 0px 30px;
     }
@@ -64,6 +68,9 @@ section h1 {
 @media screen and (max-width: 500px) {
     .Services-card {
         flex-direction: column;
+        text-align: center;
+    }
+    .Services-card h1 {
         text-align: center;
     }
     .Services-card-image {
