--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,9 +1,6 @@
 .Header {
     width: 100%;
-    height: auto;
     min-height: 500px;
-    padding: 50px 0 0px 0;
-    margin-bottom:  100px;
     display: flex;
 
 }
@@ -60,7 +57,9 @@
 
 @media screen and (max-width: 750px){
     .Header {
-        flex-direction: column-reverse;   
+        flex-direction: column-reverse;
+        justify-content: flex-end;
+        padding-top: 50px;    
     }
     .Header-split {
         width: auto;
