--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -20,6 +20,8 @@
 }
 .Header-text h1 {
     font-weight: 900;
+    text-align: left !important;
+
 }
 .Header-text .button-container {
     display: flex;
@@ -73,6 +75,10 @@
         text-align: center;
         margin: 15px 0;
     }
+    .Header-text h1 {
+        text-align: center !important;
+
+    }
     .button-container {
         display: block !important;
     }
@@ -85,5 +91,35 @@
     }
     .Header-image img {
         max-width: 200px;
+    }
+    .arrow-container {
+        visibility: hidden;
+        display: none;
+    }
+}
+
+.arrow-container {
+    width: 100%;
+    height: 60px;
+    display: flex;
+    justify-content: center;
+}
+.arrow-container svg {
+    fill: var(--purple);
+    animation: bounce 1.5s 2;
+
+}
+
+@keyframes bounce {
+    0% {
+        transform: translateY(0px);
+    }
+    50% {
+        transform: translateY(10px);
+
+    }
+    100% {
+        transform: translateY(0px);
+
     }
 }
