--- a/src/App.css
+++ b/src/App.css
@@ -10,6 +10,15 @@
   --light-blue: #DBE8F7;
 }
 
+::selection {
+  background: var(--pink);
+  color: white;
+}
+::-moz-selection {
+  background: var(--pink);
+  color: white;
+}
+
 section {
   padding: 50px 0 0 0;
 }
