--- a/src/App.css
+++ b/src/App.css
@@ -69,7 +69,7 @@ section {
   left: 0;
   padding-top: 60px;
   width: 100%;
-  height: 2000px;
+  height: auto;
 }
 @media screen and (min-width: 1000px){
 
