--- a/src/components/Contact/Contact.css
+++ b/src/components/Contact/Contact.css
@@ -3,7 +3,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-bottom: 200px;
+    margin-bottom: 100px;
     padding: 0 0px;
 }
 .Contact h1 {
@@ -14,6 +14,12 @@
     text-align: center;
     padding: 0 20%;
     color: var(--purple);
+}
+.Contact .Button {
+    width: 100%;
+    max-width: 400px;
+    align-self: center;
+    margin-bottom: 25px;
 }
 .Contact-inner {
     width: 85%;
@@ -26,6 +32,7 @@
     display: flex;
     flex-direction: column;
     align-content: center;
+
 }
 .form-top {
     width: 100%;
