--- a/src/components/Contact/Contact.css
+++ b/src/components/Contact/Contact.css
@@ -1,18 +1,20 @@
 .Contact {
-    width: 100%;
+    width: auto;
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-bottom: 100px;
-    padding: 0 0px;
+    margin: 2%;
+    padding: 50px 0px;
 }
 .Contact h1 {
     margin: 20px 0 0 0;
+    font-size: 1.5rem;
 }
 .Contact p {
     max-width: 100%;
     text-align: center;
     padding: 0 20%;
+    font-size: .8rem;
     color: var(--purple);
 }
 .Contact .Button {
@@ -22,13 +24,13 @@
     margin-bottom: 25px;
 }
 .Contact-inner {
-    width: 85%;
+    width: 100%;
     min-height: 300px;
     background: white;
     border: 4px solid var(--purple);
     box-shadow: 0 1px 5px rgba(0,0,0,.46);
     border-radius: .5rem; 
-    padding: 15px;
+    padding: 5%;
     display: flex;
     flex-direction: column;
     align-content: center;
@@ -54,7 +56,7 @@
 }
 .Contact-inner input {
     width: 95%;
-    height: 30px;
+    height: 20px;
     border: none;
     outline: none;
     font-size: 100%;
@@ -69,7 +71,7 @@
 .Contact textarea {
     width: 90%;
     height: 100%;
-    min-height: 200px;
+    min-height: 100px;
     margin: 50px 0;
     padding: 15px;
     border: 2px solid #3e3e3e;
